--- a/style.css
+++ b/style.css
@@ -1,16 +1,28 @@
 html, body {
-    height: 100%;
     background-color: rgb(0, 0, 0);
+    overflow-x: hidden;
+    height: 1000px;
 }
-.parent {
-    width: 100%;
-    height: 100%;
-    display: table;
+
+div.fixed {
+    position: fixed;
     text-align: center;
+    width: 1000px;
+    height: 500px;
+    top: 60%;
+    left: 50%;
+    margin-top: -250px; /* Negative half of height. */
+    margin-left: -500px; /* Negative half of width. */
 }
-.parent > .child {
-    display: table-cell;
-    vertical-align: middle;
+
+.diode {
+    width: 375px;
+    height: 270px;
+}
+
+.container {
+    height: 1000px;
+    overflow: hidden;
 }
 
 h1 {
@@ -18,9 +30,4 @@ h1 {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
     font-size: 3vw;
-}
-
-.paimg > .logo{
-    display: table-cell;
-    vertical-align: top;
 }
