about page complete and blog fixed

--- a/Stylesheets/about.css
+++ b/Stylesheets/about.css
@@ -1,3 +1,4 @@
+/*#6ab5ff*/
 
 html
 {
@@ -83,12 +84,12 @@ footer {
 }
 
 footer ul { /*entire list settings*/
-    font-family:'Helvetica', 'Arial';
+    font-family: 'Cabin', sans-serif;
+    font-weight: bold;
     margin-block-start: 0;
     margin-block-end: 0;
     padding: 12px 0;
     list-style: none;
-    font-weight: bold;
 }
 
 nav ul li { /*each list element*/
@@ -117,8 +118,8 @@ hr { /*horizontal line*/
     margin-left: 0px;
     height: 4px;
     border-width: 0;
-    color: #363636;
-    background-color: #363636;
+    color: white;
+    background-color: white;
 }
 
 .small-hr {
@@ -126,7 +127,7 @@ hr { /*horizontal line*/
 }
 
 .first_name {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Cabin', sans-serif;
     font-style: normal;
     font-weight: 300;
     font-size: 4.5em;
@@ -146,7 +147,7 @@ hr { /*horizontal line*/
 }
 
 .last_name {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Cabin', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 4.5em;
@@ -160,7 +161,7 @@ hr { /*horizontal line*/
 }
 
 .student {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Cabin', sans-serif;
     font-size: 1.25em;
     font-style: normal;
     font-weight: normal;
@@ -174,7 +175,7 @@ hr { /*horizontal line*/
 }
 
 .location {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Cabin', sans-serif;
     font-size: 1.25em;
     font-style: normal;
     font-weight: normal;
@@ -191,7 +192,7 @@ hr { /*horizontal line*/
 }
 
 .condensed_name {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Cabin', sans-serif;
     font-style: normal;
     font-weight: 300;
     font-size: 36px;
@@ -212,11 +213,11 @@ hr { /*horizontal line*/
 }
 
 a {
-    font-family:'Helvetica', 'Arial';
+    font-family: 'Cabin', sans-serif;
     font-style: normal;
     font-weight: 600;
     text-decoration: none;
-    color: #363636;
+    color: white;
 }
 
 a:hover {
@@ -245,17 +246,16 @@ a:hover {
 
 .dp {
     width: 100%;
-    border-radius: 50%;
 }
 
 .skill-level {
     margin-block-start: 0px;
     margin-block-end: 0px;
     margin: 0;
-    font-family:'Helvetica', 'Arial';
+    font-family: 'Cabin', sans-serif;
     font-size: 0.875em;
     line-height: 0.875em;
-    color: #363636;
+    color: white;
     display: inline-block;
     width: 25%;
 }
@@ -264,10 +264,10 @@ a:hover {
     margin-block-start: 0px;
     margin-block-end: 0px;
     margin: 0 0 0.5em;
-    font-family:'Helvetica', 'Arial';
+    font-family: 'Cabin', sans-serif;
     font-size: 1em;
     line-height: 1em;
-    color: #363636;
+    color: white;
     display: inline-block;
 }
 
@@ -369,9 +369,9 @@ a:hover {
 .company-name {
     margin-block-start: 0px;
     margin-block-end: 0px;
-    font-family:'Helvetica', 'Arial';
+    font-family: 'Cabin', sans-serif;
     font-size: 1.25em;
-    color: #363636;
+    color: #6ab5ff;
 }
 
 .job {
@@ -388,30 +388,30 @@ a:hover {
 .job-title, .job-date {
     margin-block-start: 0px;
     margin-block-end: 0px;
-    font-family:'Helvetica', 'Arial';
+    font-family: 'Cabin', sans-serif;
     font-size: 1em;
-    color: #363636;
+    color: white;
 }
 
 .job-date {
-    color: #7C7777;
+    color: #6ab5ff;
 }
 
 .job-description {
     margin-block-start: 0px;
     margin-block-end: 0px;
-    font-family:'Helvetica', 'Arial';
+    font-family: 'Cabin', sans-serif;
     font-size: 0.875em;
-    color: #363636;
+    color: white;
 }
 
 a p {
     margin-block-start: 0px;
     margin-block-end: 0px;
-    font-family:'Helvetica', 'Arial';
+    font-family: 'Cabin', sans-serif;
     font-size: 1.25em;
     line-height: 1.25em;
-    color: #363636;
+    color: white;
 }
 
 h1 {
@@ -419,7 +419,7 @@ h1 {
     margin-block-end: 0px;
     margin: 10px 0;
     font-size: 3em;
-    font-family:'Helvetica', 'Arial';
+    font-family: 'Cabin', sans-serif;
 }
 
 h2 {
@@ -427,16 +427,17 @@ h2 {
     margin-block-end: 0px;
     margin: 10px 0;
     font-size: 2em;
-    font-family:'Helvetica', 'Arial';
+    font-family: 'Cabin', sans-serif;
+    color: white;
 }
 
 p {
     margin-block-start: 0px;
     margin-block-end: 0px;
-    font-family:'Helvetica', 'Arial';
+    font-family: 'Cabin', sans-serif;
     font-size: 1.25em;
     line-height: 1.25em;
-    color: #363636;
+    color: white;
 }
 
 main {
