--- a/quartz-hugo/assets/styles/custom.scss
+++ b/quartz-hugo/assets/styles/custom.scss
@@ -1,25 +1,25 @@
 // Add your own CSS here!
 
 :root {
-  --light: #faf8f8;
+  --light: #000000;
   --dark: #141021;
-  --secondary: #284b63;
-  --tertiary: #84a59d;
+  --secondary: #6ab5ff;
+  --tertiary: #fff354;
   --visited: #afbfc9;
   --primary: #f28482;
   --gray: #4e4e4e;
   --lightgray: #f0f0f0;
   --outlinegray: #dadada;
   --million-progress-bar-color: var(--secondary);
-  --highlighted: #f5dfaf88;
+  --highlighted: rgb(255, 241, 31);
 }
 
 [saved-theme="dark"] {
   --light: #1e1e21 !important;
   --dark: #fbfffe !important;
-  --secondary: #6b879a !important;
-  --visited: #4a575e !important;
-  --tertiary: #84a59d !important;
+  --secondary: #6ab5ff !important;
+  --visited: #ffef21 !important;
+  --tertiary: #fff417 !important;
   --primary: #f58382 !important;
   --gray: #d4d4d4 !important;
   --lightgray: #292633 !important;
