--- a/quartz-hugo/layouts/partials/head.html
+++ b/quartz-hugo/layouts/partials/head.html
@@ -61,7 +61,7 @@
   <link href="{{$lightSyntax.Permalink}}" rel="stylesheet" id="theme-link">
 
    <!-- Base scripts -->
-  {{$scripts := (slice "js/darkmode.js" "js/util.js")}}
+<!--  {{$scripts := (slice "js/darkmode.js" "js/util.js")}}-->
   {{range $scripts}}
   {{$scriptname := .}}
   {{ $s := resources.Get $scriptname | resources.ExecuteAsTemplate $scriptname . | resources.Fingerprint "md5" | resources.Minify }}
