--- a/quartz-hugo/assets/styles/custom.scss
+++ b/quartz-hugo/assets/styles/custom.scss
@@ -3,7 +3,7 @@
 :root {
   --light: #000000;
   --dark: #141021;
-  --secondary: #6ab5ff;
+  --secondary: #fff11f;
   --tertiary: #fff354;
   --visited: #afbfc9;
   --primary: #f28482;
