back link to construction site

--- a/quartz-hugo/assets/styles/custom.scss
+++ b/quartz-hugo/assets/styles/custom.scss
@@ -4,7 +4,7 @@
   --light: #000000;
   --dark: #141021;
   --secondary: #fff11f;
-  --tertiary: #fff354;
+  --tertiary: #fff11f;
   --visited: #afbfc9;
   --primary: #f28482;
   --gray: #4e4e4e;
