--- a/quartz-hugo/layouts/partials/head_blog.html
+++ b/quartz-hugo/layouts/partials/head_blog.html
@@ -67,9 +67,9 @@
   {{ $s := resources.Get $scriptname | resources.ExecuteAsTemplate $scriptname . | resources.Fingerprint "md5" | resources.Minify }}
   <script src="{{$s.Permalink}}"></script>
   {{end}}
-<!--  {{partial "katex.html" .}}-->
+  {{partial "katex.html" .}}
 
-<!--  {{partial "mermaid.html" .}}-->
+  {{partial "mermaid.html" .}}
 
   <script src="https://cdn.jsdelivr.net/npm/@floating-ui/core@1.2.1"></script>
   <script src="https://cdn.jsdelivr.net/npm/@floating-ui/dom@1.2.1"></script>
