--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -2,13 +2,13 @@
 
 :root {
   --light: #000000;
-  --dark: #141021;
+  --dark: #ffffc0;
   --secondary: #fff11f;
   --tertiary: #fff11f;
   --visited: #afbfc9;
   --primary: #f28482;
-  --gray: #4e4e4e;
-  --lightgray: #f0f0f0;
+  --gray: #d2d2d2;
+  --lightgray: #c4a000;
   --outlinegray: #dadada;
   --million-progress-bar-color: var(--secondary);
   --highlighted: rgb(255, 241, 31);
